# open-asm

./: .dockerignore  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  DEVELOPER_GUIDE.md  LICENSE  README.md  docker-compose.yml  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  taskfile.yml
.github/: .actrc  FUNDING.yml  (+2 more)
worker/: .dockerignore  .env.example  .example.env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  build.rs  connect.ts  entrypoint.sh  example.env  go.mod  go.sum  index.ts  package-lock.json  package.json  resume.cfg  taskfile.yml
worker-agent/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
worker-agent/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  proto.rs
worker-agent/src/layer1/: auth.rs  grpc_client.rs  heartbeat.rs  job_poller.rs  manifest.rs  mod.rs
worker-agent/src/layer2/: job_processor.rs  mod.rs  tool_manager.rs
worker-rs/: .env.example  .gitignore  AGENTS.md  Cargo.toml  build.rs  taskfile.yml
worker-rs/src/: error.rs  main.rs  state.rs
worker-rs/src/executor/: mod.rs
worker-rs/src/grpc/: mod.rs
worker-rs/src/proto/: jobs_registry.proto  workers.proto
worker-rs/src/tools/: mod.rs
worker/cli/: client.go
worker/cmd/app/: main.go
worker/cmd/oasm-worker/: main.go
worker/internal/cli/: root.go
worker/internal/config/: config.go
worker/internal/tui/: events.go  header.go  jobs.go  messages.go  model.go  output.go  sessions.go  statusbar.go  styles.go  sysmetrics.go
worker/internal/worker/: browser.go  client.go  events.go  helper.go  job.go  job_unix.go  job_windows.go  network-interfaces.go  pool.go  remote_execute.go  screenshot.go
worker/proto/: jobs_registry.proto
worker/scripts/: install.ps1  install.sh
worker/services/: grpc.service.ts
worker/services/core-api/: alive.ts  api.ts  index.ts  workerId.ts
worker/services/grpc-client/: index.ts  types.ts
worker/src/: error.rs  lib.rs  main.rs  state.rs
worker/src/executor/: mod.rs
worker/src/grpc/: mod.rs
worker/src/proto/: workers.proto
worker/src/services/: browser.rs
worker/src/tools/: mod.rs
worker/tests/: browser_service.rs
worker/tool/: runCommand.ts  tool.ts
worker/tool/handlers/: screenshot.ts
(+1218 files in other folders)
