[package]
name = "worker-agent"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust Worker Agent with gRPC and dynamic tool management"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[lib]
name = "worker_agent"
path = "src/lib.rs"

[[bin]]
name = "worker-agent"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
