[package]
name = "worker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.14.5"
prost = "0.14.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["stream", "json"] }
zip = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
flate2 = "1"
tokio-stream = "0.1"
thiserror = "2"
tar = "0.4"
prost-types = "0.14"

[build-dependencies]
prost-build = "0.14"